--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <i class=" button__icon fa-solid fa-plus"></i>
                 <span class="" href="">Agregar</a>
             </a>
-            <div class="button__container">
+            <a class="button__container" href="buscar.html">
                 <i class=" button__icon fa-solid fa-magnifying-glass"></i>
-                <a class="" href="">Buscar</a>
-            </div>
+                <span class="">Buscar</span>
+            </a>
         </div>
 
     </div>
