--- a/buscar.html
+++ b/buscar.html
@@ -17,12 +17,17 @@
             <i class="btn-regreso__icon fa-solid fa-arrow-left"></i>
         </a>
     </nav>
-    <div class="caja__busqueda">
+    <!-- <div class="caja__busqueda">
         <input type="text" id="inputBusqueda" class="txt__busqueda" placeholder="Buscar">
-        <button id="btnBuscar" class="btn__busqueda">Buscar</button>
-    </div>
+        <button id="btnBuscar" class="btn__primary">Buscar</button>
+    </div> -->
 
-    <table id="tablaResultados" class="tabla__resultados">
+
+    <input type="text" id="busqueda" placeholder="Buscar por Número de Tag, Número de Alta, Nombre, Placas o Modelo">
+    <button id="btnBuscar">Buscar</button>
+
+    <!-- Tabla para mostrar resultados -->
+    <table id="tablaResultados">
         <thead>
             <tr>
                 <th>Número de Tag</th>
@@ -33,17 +38,21 @@
                 <th>Status de Activación</th>
                 <th>Status de Entrega</th>
                 <th>Fecha de Alta</th>
-                <th>Tel</th>
+                <th>Teléfono</th>
                 <th>Correo</th>
                 <th>Modelo</th>
+                <th>Color</th>
                 <th>Placas</th>
                 <th>Año</th>
             </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+            <!-- Los resultados se insertarán aquí -->
+        </tbody>
     </table>
 
-    <script src="assets/js/buscar.js"></script>
+    <!-- Enlaza el archivo JavaScript -->
+    <script type="module" src="assets/js/buscar.js"></script>
 </body>
 
 </html>
