--- a/agregar.html
+++ b/agregar.html
@@ -78,6 +78,10 @@
 
     </div>
 
+    <div id="toast" class="toast">
+        <span id="toastMessage"></span>
+    </div>
+
     <script type="module">
         // Importa las funciones que necesitas de los SDKs de Firebase
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
