modulo de edicion y almacenado en firebase

--- a/agregar.html
+++ b/agregar.html
@@ -78,9 +78,12 @@
 
     </div>
 
+    <!-- Toast -->
     <div id="toast" class="toast">
         <span id="toastMessage"></span>
     </div>
+
+
 
     <script type="module">
         // Importa las funciones que necesitas de los SDKs de Firebase
