--- a/buscar.html
+++ b/buscar.html
@@ -46,6 +46,38 @@
         </tbody>
     </table>
 
+    <!-- Modal de edicion -->
+    <!-- Modal de edición -->
+    <div id="modalEditar"
+        style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); justify-content: center; align-items: center;">
+        <div style="background-color: white; padding: 20px; border-radius: 8px; width: 300px;">
+            <h2>Editar Registro</h2>
+            <form id="formEditar">
+                <input type="text" id="editNumeroTag" placeholder="Número de Tag">
+                <input type="text" id="editNumeroAlta" placeholder="Número de Alta">
+                <input type="text" id="editNombreLocal" placeholder="Nombre del Local">
+                <input type="text" id="editNombreSolicitante" placeholder="Nombre del Solicitante">
+                <input type="text" id="editEmpresaProyecto" placeholder="Empresa / Proyecto">
+                <input type="text" id="editStatusActivacion" placeholder="Status de Activación">
+                <input type="text" id="editStatusEntrega" placeholder="Status de Entrega">
+                <input type="text" id="editFechaAlta" placeholder="Fecha de Alta">
+                <input type="text" id="editTelefono" placeholder="Teléfono">
+                <input type="text" id="editCorreo" placeholder="Correo">
+                <input type="text" id="editModelo" placeholder="Modelo">
+                <input type="text" id="editColor" placeholder="Color">
+                <input type="text" id="editPlacas" placeholder="Placas">
+                <input type="text" id="editAño" placeholder="Año">
+                <button type="submit">Guardar Cambios</button>
+                <button type="button" id="btnCerrarModal">Cerrar</button>
+            </form>
+        </div>
+    </div>
+
+    <div id="toast" class="toast">
+        <span id="toastMessage"></span>
+    </div>
+
+
     <!-- Enlaza el archivo JavaScript -->
     <script type="module" src="assets/js/buscar.js"></script>
 </body>
