--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <i class=" button__icon fa-solid fa-magnifying-glass"></i>
                 <span class="">Buscar</span>
             </a>
+            <a class="button__container" href="agregarPension.html">
+                <i class=" button__icon fa-solid fa-plus"></i>
+                <span class="">Nueva pensión</span>
+            </a>
         </div>
 
     </div>
